syntax = "proto3";

option go_package = "github.com/AntonyIS/go-grpc-crud/proto";

service CarService {
    rpc CreateCar (CarRequest) returns (CarResponse) {}
    rpc GetCar (CarID) returns (CarResponse) {}
    rpc UpdateCar (CarRequest) returns (CarResponse) {}
    rpc DeleteCar (CarID) returns (CarMessageResponse) {}
}


message CarRequest {
    string name = 1;
    string description = 2;
}
message CarResponse {
    string name = 1;
    string description = 2;
    string id = 3;
}

message CarID {
    string id = 1;
}

message CarMessageResponse {
    string message = 1;
}